--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Следи за всеми новинками Telegram Gifts вместе с Настей! Апгрейды, обзоры, инсайды и гайды.">
-  <title>Telegram подарки с Настей</title>
+  <meta name="description" content="Как продать подарок в тг? Подарки Телеграм, их апгрейд и буст. Ловля самых редких дропов!">
+  <meta name="keywords" content="Telegram подарки, телеграм подарки, апгрейд подарков, telegram nft, телеграм маркет, gifts telegram, нфт подарки тг, подарки в телеграмм">
+  <title>Подарки Телеграм — Обзоры, Апгрейды, Перепродажа!</title>
 </head>
 <body>
-  <h1>Привет, я Настя 🎁</h1>
+  <h1>Телеграм подарки: как продать подарок?</h1>
   <p>Я веду канал о Telegram-подарках. Обзоры, скидки, апгрейды и всё самое интересное!)</p>
   <p>Подписывайся на мой канал 👉 <a href="https://t.me/nastyagift" target="_blank">@nastyagift</a></p>
 </body>
