--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="description" content="Как продать подарок в тг? Подарки Телеграм, их апгрейд и буст. Ловля самых редких дропов!">
   <meta name="keywords" content="Telegram подарки, телеграм подарки, апгрейд подарков, telegram nft, телеграм маркет, gifts telegram, нфт подарки тг, подарки в телеграмм">
   <title>Подарки Телеграм — Обзоры, Апгрейды, Перепродажа!</title>
+  <meta property="og:title" content="Лучший Telegram-канал о подарках">
+<meta property="og:description" content="Узнай где ловить подарки, апгрейдить их и перепродавать выгодно.">
+<meta property="og:image" content="https://your-site.github.io/images/preview.jpg">
+<meta property="og:url" content="https://nasya2303.github.io/nastya-gifts.github.io/">
+<meta property="og:type" content="website">
 </head>
 <body>
   <h1>Телеграм подарки: как продать подарок?</h1>
