--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="description" content="Как продать подарок в тг? Подарки Телеграм, их апгрейд и буст. Ловля самых редких дропов!">
   <meta name="keywords" content="Telegram подарки, телеграм подарки, апгрейд подарков, telegram nft, телеграм маркет, gifts telegram, нфт подарки тг, подарки в телеграмм">
   <title>Подарки Телеграм — Обзоры, Апгрейды, Перепродажа!</title>
+  <!-- Favicon -->
+  <link rel="icon" href="photo_2025-06-20 13.20.26 (1).ico" type="image/png" />
 </head>
 <body>
   <h1>Телеграм подарки: как продать подарок?</h1>
