--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link rel="icon" href="photo_2025-06-20 13.20.26 (1).ico" type="image/png" />
 </head>
 <body>
-  <h1>Телеграм подарки: как продать подарок?</h1>
-  <p>Я веду канал о Telegram-подарках. Обзоры, скидки, апгрейды и всё самое интересное!)</p>
-  <p>Подписывайся на мой канал 👉 <a href="https://t.me/nastyagift" target="_blank">@nastyagift</a></p>
+  <center></center><h1>Телеграм подарки: как продать подарок?</h1></center>
+  </center><p>Я веду канал о Telegram-подарках. Обзоры, скидки, апгрейды и всё самое интересное!)</p></center>
+  </center><p>Подписывайся на мой канал 👉 <a href="https://t.me/nastyagift" target="_blank">@nastyagift</a></p></center>
 </body>
 </html>
