--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div style="text-align: center;">
   <h1>Телеграм подарки: как продать подарок?</h1>
-    <p>Краткий экскурс в мир NFT в Телеграме. 
-Что такое вообще эти ваши Телеграм подарки? Это цифровой предмет на просторах самого нашумевшего Телеграма Паши Дурова. Если кто помнит, в году так 20-21 были очень популярны нфт коллекции в области крипты, стреляли они недолго и   почему-то не закрепился интерес к ним в мире CRYPTO.</p>
+    <p>Краткий экскурс в мир NFT в Телеграме. Что такое вообще эти ваши Телеграм подарки? Это цифровой предмет на просторах самого нашумевшего Телеграма Паши Дурова. Если кто помнит, в году так 20-21 были очень популярны нфт коллекции в области крипты, стреляли они недолго и   почему-то не закрепился интерес к ним в мире CRYPTO.</p>
 <p>Телеграм подарки появились в октябре 2024 года и на сегодняшний день (20.06.25) их капа составляет больше $53,3 млн и интерес только растет. Довольно таки неплохо!)</p>
 <p>Давайте приведу пример: за последние сутки коллекция <b>Plush Pepe</b> показала оборот в $264K, уступив только легендарным <b>CryptoPunks</b> ($390K), которые на рынке с 2017 года. Как вам такое, Илоны Маски???!!</p>
 <p>Короче говоря, если ты хочешь узнать все о подарочках тг, как на них заработать, как их апргейдить, какие иксы они могут принести -  тогда welcome ко мне в телеграм канал.</p>
